[package]
name = "task_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = "0.12.24"
ahash = "0.8.12"
csv = "1.4.0"
anyhow = "1.0.100"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.23.0"
mockito = "1.7.0"
